--- a/Form/views/search.ejs
+++ b/Form/views/search.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>search</title>
   </head>
   <body bgcolor="pink">
     <a href="/">Home</a>| <a href="/insert">Insert</a>|
@@ -11,7 +11,7 @@
      <a href="/update">Update</a>|
       <a href="/search">Seacrh</a> 
     <hr size="4" color="red" />
-    <h1>Welcome to home page</h1>
+    <h1>Welcome to search page</h1>
     <hr size="4" color="red" />
     www.mycompany.com || All Rights Reserved
   </body>
